--- a/TravelingSalesPerson/TravelingSalesPerson/TravelingSalesPerson.csproj
+++ b/TravelingSalesPerson/TravelingSalesPerson/TravelingSalesPerson.csproj
@@ -55,9 +55,19 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="GeneticAlgorithmOptions.xaml.cs">
+      <DependentUpon>GeneticAlgorithmOptions.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Metrics.cs" />
     <Compile Include="TSP.cs" />
     <Compile Include="TSPConnection.cs" />
     <Compile Include="TSPEdge.cs" />
+    <Compile Include="TSPPath.cs" />
+    <Compile Include="TSPPoint.cs" />
+    <Page Include="GeneticAlgorithmOptions.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
